--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,13 @@
+
 #logo{
     max-height: 50px;
     object-fit: fill
 }
 #hero .carousel-inner img{
     height: 80vh;
-    object-fit: cover;
-    filter: grayscale(50%)
+    object-fit: contain;
+    filter: grayscale(25%);
+    background: linear-gradient(90deg,#1c3643,#273b47 25%,#1e5372)
 }
 .overlay{
     position: absolute;
@@ -16,6 +18,11 @@
     background: rgba(0, 0, 0, 0.5);
     color: white
 }
-.overlay .container{
+.overlay .container-fluid,
+.overlay .container-fluid .row{
     height: 100%;
+}
+.overlay p,
+.overlay h1{
+    text-shadow: 1px 1px 1px black
 }
