--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
-
+body{
+}
 #logo{
-    max-height: 50px;
+    max-height: 45px;
     object-fit: fill
 }
 #hero .carousel-inner img{
@@ -25,4 +26,17 @@
 .overlay p,
 .overlay h1{
     text-shadow: 1px 1px 1px black
+}
+#productos img{
+    filter: blur(50%)
+}
+#productos h3{
+    text-shadow: 2px 1px 1px black;
+}
+#productos .card-img-overlay{
+    background: rgba(12, 123, 255, 0.2);
+    transition: .3s
+}
+#productos .card-img-overlay:hover{
+    background: rgba(12, 123, 255, 0.4);
 }
