--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,8 +34,15 @@ body{
     text-shadow: 2px 1px 1px black;
 }
 #productos .card-img-overlay{
-    background: rgba(12, 123, 255, 0.2);
+    background: rgba(0, 0, 0, 0.4);
     transition: .3s
+}
+#productos img{
+    object-fit: contain
+}
+#productos .card-img-overlay .container,
+#productos .card-img-overlay .container .row{
+    height: 100%;
 }
 #productos .card-img-overlay:hover{
     background: rgba(12, 123, 255, 0.4);
