--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body{
 }
 .overlay p,
 .overlay h1{
-    text-shadow: 1px 1px 1px black
+    text-shadow: 4px 4px 3px black
 }
 #productos img{
     filter: blur(50%)
@@ -49,6 +49,7 @@ body{
 }
 #productos .card-img-overlay{
     background: rgba(0, 0, 0, 0.4);
+    border: 1px solid grey;
     transition: .3s;
     padding: 0;
     border-radius: 1em
@@ -62,6 +63,9 @@ body{
 }
 #productos .card-img-overlay:hover{
     background: rgba(255, 255, 255, 0.0000001);
+}
+#productos{
+    background: linear-gradient(180deg, white 80%, #343a4069)
 }
 #quienesSomos{
     background-color: #343a40
