--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -14,7 +14,7 @@ body{
     outline: 2px solid cyan;
 }
 #productos {
-    margin-top: 100px;
+    padding-top: 105px;
     background: linear-gradient(180deg, white 80%, #1e537294)
 }
 #productos img{
